--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "build:dev": "vite build --mode development && cp dist/index.html dist/404.html",
   "lint": "eslint .",
   "preview": "vite preview",
-  "deploy": "npm run build && mkdir -p docs && rm -rf docs/* && cp -r dist/* docs/ && git add docs && git commit -m 'Deploy site' && git push"
+  "deploy": "npm run build && mkdir -p docs && rm -rf docs/* && cp -r dist/* docs/ && echo '--- DOCS CONTENT ---' && ls docs && git add docs && git commit -m 'Deploy site' || true && git push"
+
 },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
